Adjusted Animal structure and swagger documentation.
